tests/suite/snapshots/suite__analyze__everything_is_meaningless_except_cmp-2.snap
---
source: tests/suite/analyze.rs
assertion_line: 308
expression: live_ranges
---
rsp          enter:
|              mov _x, 1
|   _x         mov _y, 2
|   ●   _y     cmp _x, _y
|              add _x, 1
|              je exit
|            fallthrough:
|              add _y, 1
|              jmp exit
|            exit:
●              ret

